--- a/app/resources.qrc
+++ b/app/resources.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/images/background">
         <file>resources/grass.jpg</file>
     </qresource>
+    <qresource prefix="/images/suit">
+        <file>resources/spades.svg</file>
+    </qresource>
 </RCC>
