--- a/app/resources.qrc
+++ b/app/resources.qrc
@@ -5,4 +5,7 @@
     <qresource prefix="/images/suit">
         <file>resources/spades.svg</file>
     </qresource>
+    <qresource prefix="/images/backSide">
+        <file>resources/black_back_side.jpg</file>
+    </qresource>
 </RCC>
