--- a/app/resources.qrc
+++ b/app/resources.qrc
@@ -2,9 +2,7 @@
     <qresource prefix="/images/background">
         <file>resources/grass.jpg</file>
     </qresource>
-    <qresource prefix="/images/slightMode/clubs">
-        <file>resources/spades.svg</file>
-        <file>resources/spades/jack.png</file>
+    <qresource prefix="/images">
         <file>resources/lightMode/clubs/ace.png</file>
         <file>resources/lightMode/clubs/eight.png</file>
         <file>resources/lightMode/clubs/five.png</file>
@@ -18,11 +16,6 @@
         <file>resources/lightMode/clubs/ten.png</file>
         <file>resources/lightMode/clubs/three.png</file>
         <file>resources/lightMode/clubs/two.png</file>
-    </qresource>
-    <qresource prefix="/images/lightMode/backSide">
-        <file>resources/lightMode/black_back_side.jpg</file>
-    </qresource>
-    <qresource prefix="/images/lightMode/diamonds">
         <file>resources/lightMode/diamonds/ace.png</file>
         <file>resources/lightMode/diamonds/eight.png</file>
         <file>resources/lightMode/diamonds/five.png</file>
@@ -36,8 +29,6 @@
         <file>resources/lightMode/diamonds/ten.png</file>
         <file>resources/lightMode/diamonds/three.png</file>
         <file>resources/lightMode/diamonds/two.png</file>
-    </qresource>
-    <qresource prefix="/images/lightMode/hearts">
         <file>resources/lightMode/hearts/ace.png</file>
         <file>resources/lightMode/hearts/eight.png</file>
         <file>resources/lightMode/hearts/five.png</file>
@@ -51,8 +42,6 @@
         <file>resources/lightMode/hearts/ten.png</file>
         <file>resources/lightMode/hearts/three.png</file>
         <file>resources/lightMode/hearts/two.png</file>
-    </qresource>
-    <qresource prefix="/images/lightMode/spades">
         <file>resources/lightMode/spades/ace.png</file>
         <file>resources/lightMode/spades/eight.png</file>
         <file>resources/lightMode/spades/five.png</file>
@@ -66,5 +55,6 @@
         <file>resources/lightMode/spades/ten.png</file>
         <file>resources/lightMode/spades/three.png</file>
         <file>resources/lightMode/spades/two.png</file>
+        <file>resources/lightMode/back_side.jpg</file>
     </qresource>
 </RCC>
