--- a/app/resources.qrc
+++ b/app/resources.qrc
@@ -56,6 +56,7 @@
         <file>resources/lightMode/spades/three.png</file>
         <file>resources/lightMode/spades/two.png</file>
         <file>resources/lightMode/back_side.jpg</file>
+        <file>resources/dib.png</file>
     </qresource>
     <qresource prefix="/images/buttons">
         <file>resources/hit.png</file>
